# BH-FEMS

./: .gitignore  Dockerfile  docker-compose.yml  fems_dev.db  fems_implementation_plan.md  fems_project_architecture.md  package-lock.json  package.json  requirements.txt  seed_debug.txt  seed_error.txt  server_log.txt  vercel.json
backend/: .env  check_db.py  check_models.py  debug_frontend_payload.py  fems_dev.db  final_verify.py  pyproject.toml  requirements.txt  seed_db.py  seed_sites.py
backend/alembic/: env.py
backend/alembic/versions/: b636a2ca0baf_initial_baseline.py
backend/app/: main.py  seed.py
backend/app/api/: attendance.py  auth.py  dashboard.py  departments.py  employees.py  expenses.py  holidays.py  leaves.py  logs.py  points.py  reports.py  roles.py  shifts.py  sites.py  tasks.py  teams.py
backend/app/core/: audit.py  config.py  database.py  security.py
backend/app/models/: __init__.py  attendance.py  department.py  employee.py  expense.py  holiday.py  leave.py  log.py  notification.py  points.py  report.py  role.py  shift.py  site.py  task.py  team.py
backend/app/schemas/: attendance.py  auth.py  department.py  employee.py  expense.py  holiday.py  leave.py  log.py  report.py  role.py  shift.py  site.py  task.py  team.py
backend/app/services/: attendance_service.py  dashboard_service.py  employee_service.py  expense_service.py  leave_service.py  misc_service.py  org_service.py  point_service.py  report_service.py  shift_service.py  site_service.py  task_service.py
backend/scripts/seeds/: seed.py  seed_leaves.py  seed_shifts.py
(+104 files in other folders)
