[project]
name = "fems-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "sqlalchemy==2.0.48",
    "alembic==1.18.4",
    "psycopg2-binary==2.9.9",
    "cryptography==42.0.5",
    "pyopenssl==24.1.0",
    "pydantic==2.13.0b2",
    "pydantic-settings==2.13.1",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.22",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
    "google-auth==2.49.2"
]

[tool.pyright]
include = ["app"]
exclude = ["**/__pycache__"]
venvPath = "."
venv = "venv"
